--- a/web/css/responsive.css
+++ b/web/css/responsive.css
@@ -1,20 +1,46 @@
 /********** Base styles **********/
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 h1 {
     margin-bottom: 15px;
 }
 
-p {
-    border: 1px solid black;
-    background-color: #A52A2A;
+header {
+    margin-bottom: 15px;
+    font-size: 1.5em;
+    font-style: revert;
+    text-align: right;
+    background-color: cadetblue;
+    width: 60%;
+    height: 40px;
+    /*position: relative;*/
+    left: 40%;
+    border: 5px solid black;
+
+}
+
+#firstHeader {
+    background-color: rosybrown;
+}
+
+#secondHeader {
+    background-color: indianred;
+}
+
+#thirdHeader {
+    background-color: burlywood;
+}
+
+section {
+    padding: 15px;
+    background-color: grey;
+    border: 4px solid white;
+    position: relative;
+    /* margin: auto; */
     width: 90%;
-    height: 150px;
-    margin-right: auto;
-    margin-left: auto;
-    font-family: Helvetica, serif;
-    color: white;
 }
 
 /* Simple Responsive Framework. */
@@ -26,7 +52,7 @@ p {
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
         float: left;
-        border: 1px solid green;
+        /*border: 4px solid white;*/
     }
     .col-lg-1 {
         width: 8.33%;
@@ -70,7 +96,7 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
         float: left;
-        border: 1px solid green;
+        /*border: 4px solid white;*/
     }
     .col-md-1 {
         width: 8.33%;
