--- a/web/css/responsive.css
+++ b/web/css/responsive.css
@@ -1,137 +1,163 @@
-/********** Base styles **********/
-* {
-    box-sizing: border-box;
+html {
+    background-color: #016295;
     margin: 0;
     padding: 0;
 }
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    color: whitesmoke;
+}
+
 h1 {
-    margin-bottom: 15px;
+    font-size: 200%;
+    height: 50px;
+    padding: 0;
+    text-align: center;
 }
 
-header {
-    margin-bottom: 15px;
-    font-size: 1.5em;
-    font-style: revert;
-    text-align: right;
-    background-color: cadetblue;
-    width: 60%;
-    height: 40px;
-    /*position: relative;*/
-    left: 40%;
-    border: 5px solid black;
-
-}
-
-#firstHeader {
-    background-color: rosybrown;
-}
-
-#secondHeader {
-    background-color: indianred;
-}
-
-#thirdHeader {
-    background-color: burlywood;
-}
-
-section {
-    padding: 15px;
-    background-color: grey;
-    border: 4px solid white;
+h2 {
+    font-size: 125%;
+    color: #024669;
+    float: right;
     position: relative;
-    /* margin: auto; */
-    width: 90%;
+    padding: 1% 2% 1% 2%;
+    background-color: #2280BF;
+    width: auto;
+    margin-top: -3.4%;
+    margin-right: -3.4%;
+    outline: 1px solid black;
+
 }
 
-/* Simple Responsive Framework. */
-.row {
-    width: 100%;
+p {
+    color: #024669;
+    clear: right;
+    padding: 1% 2% 1% 2%;
 }
 
-/********** Large devices only **********/
-@media (min-width: 992px) {
-    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-        float: left;
-        /*border: 4px solid white;*/
-    }
-    .col-lg-1 {
-        width: 8.33%;
-    }
-    .col-lg-2 {
-        width: 16.66%;
-    }
-    .col-lg-3 {
-        width: 25%;
-    }
-    .col-lg-4 {
-        width: 33.33%;
-    }
-    .col-lg-5 {
-        width: 41.66%;
-    }
-    .col-lg-6 {
-        width: 50%;
-    }
-    .col-lg-7 {
-        width: 58.33%;
-    }
-    .col-lg-8 {
-        width: 66.66%;
-    }
-    .col-lg-9 {
-        width: 74.99%;
-    }
-    .col-lg-10 {
-        width: 83.33%;
-    }
-    .col-lg-11 {
-        width: 91.66%;
-    }
-    .col-lg-12 {
-        width: 100%;
-    }
+#colum1 {
+    background-color: #F0D27A;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 29.33%;
+    float: left;
+    padding: 1% 1% 1% 1%;
+    outline: 1px solid black;
+
 }
 
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-        float: left;
-        /*border: 4px solid white;*/
+#hchicken {
+    background-color: #FDB813;
+}
+
+#colum2 {
+    background-color: #AFD776;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 29.33%;
+    float: left;
+    padding: 1% 1% 1% 1%;
+    outline: 1px solid black;
+}
+
+#hbeef {
+    background-color: #80C31C;
+}
+
+#colum3 {
+    background-color: #95CAE9;
+    margin-right: 1%;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 29.33%;
+    float: left;
+    padding: 1% 1% 1% 1%;
+    outline: 1px solid black;
+}
+
+#hlamb {
+    background-color: #5095CE;
+}
+
+/* RESPONSIVE MEDIA CODE */
+/*************************/
+/* Screens 991px or less */
+@media screen and (max-width: 991px) {
+
+    #colum1 {
+        width: 45%;
     }
-    .col-md-1 {
-        width: 8.33%;
+
+    #colum2 {
+        width: 45%;
     }
-    .col-md-2 {
-        width: 16.66%;
+
+    #colum3 {
+        width: 94%;
+        height: 150px auto;
     }
-    .col-md-3 {
-        width: 25%;
+
+    #hchicken, #hbeef {
+        font-size: 125%;
+        float: right;
+        position: relative;
+        padding: 1% 2% 1% 2%;
+        width: auto;
+        margin-top: -2.3%;
+        margin-right: -2.2%;
     }
-    .col-md-4 {
-        width: 33.33%;
+
+    #hlamb {
+        font-size: 125%;
+        float: right;
+        position: relative;
+        padding: 1% 2% 1% 2%;
+        width: auto;
+        margin-top: -1.1%;
+        margin-right: -1.1%;
+
     }
-    .col-md-5 {
-        width: 41.66%;
+
+}
+
+/* Screens 767px or less */
+@media screen and (max-width: 767px) {
+
+    #colum1 {
+        width: auto;
+        margin-right: 6%;
+        margin-left:  6%;;
     }
-    .col-md-6 {
-        width: 50%;
+
+    #colum2 {
+        width: auto;
+        margin-top: 5%;
+        margin-right: 6%;
+        margin-left: 6%;
     }
-    .col-md-7 {
-        width: 58.33%;
+
+    #colum3 {
+        width: auto;
+        margin-top: 5%;
+        margin-right: 6%;
+        margin-left: 6%;
     }
-    .col-md-8 {
-        width: 66.66%;
+
+    #hlamb, #hchicken, #hbeef {
+        font-size: 125%;
+        float: right;
+        position: relative;
+        padding: 1% 2% 1% 2%;
+        width: auto;
+        margin-top: -1.2%;
+        margin-right: -1.2%;
+
     }
-    .col-md-9 {
-        width: 74.99%;
-    }
-    .col-md-10 {
-        width: 83.33%;
-    }
-    .col-md-11 {
-        width: 91.66%;
-    }
-    .col-md-12 {
-        width: 100%;
-    }
+
 }
